# kassow-ros2

./: .gitignore  README.md
kr_description/: CMakeLists.txt  README.md  package.xml
kr_description/launch/: display.launch.py
kr_description/meshes/kr1018/collision/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
kr_description/meshes/kr1018/visual/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
kr_description/rviz/: display.rviz
kr_description/urdf/: kr1018.urdf.xacro
kr_example/: CMakeLists.txt  package.xml
kr_example/cpp/: CMakeLists.txt
kr_example/cpp/src/: jog_linear.cpp  move_joint.cpp  robot_state.cpp  self_motion.cpp
kr_example/python/: setup.cfg  setup.py
kr_example/python/kr_example_python/: follow_joint.py  jog_linear.py  move_joint.py  robot_state.py  self_motion.py
kr_example/src/: follow_joint.cpp  kr_example.cpp  kr_ros2_test.cpp  self_motion.cpp
kr_msgs/: CMakeLists.txt  package.xml
kr_msgs/.kdev4/: kr_msg_ros2.kdev4
kr_msgs/cmake/: humble.cmake  jazzy.cmake
kr_msgs/msg/: SystemState.msg
